--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <!-- Author:     Tyler Pitcock
@@ -13,11 +14,95 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/5f523fed1c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="wrapper">
 
-        
+        <!-- header section -->
+        <div class="h-container">
+            <img src="img/logo.png" alt="Lakeside General Store">
+        </div>
+
+        <!-- navigation section -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="baits.html">Live Bait</a></li>
+                <li><a href="tackle.html">Tackle</a></li>
+                <li><a href="services.html">Other Services</a></li>
+            </ul>
+        </nav>
+
+        <!-- top container -->
+        <section class="top-container">
+            <div class="showcase">
+                <h1>Welcome to Lakeside!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia est repellendus modi. Vitae
+                    perspiciatis adipisci doloribus, ab illo, expedita quam sit esse beatae culpa quod? Quis rem unde
+                    deleniti fugiat sequi doloremque doloribus! Eum!</p>
+            </div>
+
+            <div class="services">
+                <h1>What we offer!</h1>
+                <ul>
+                    <li>Live Bait</li>
+                    <li>Tackle</li>
+                    <li>Fishing and Hunting Licences</li>
+                    <li>Camping</li>
+                    <li>Firewood</li>
+                    <li>Drinks</li>
+                    <li>Pop</li>
+                    <li>Snacks</li>
+                </ul>
+                <a href="" class="btn">Shop Now</a>
+            </div>
+        </section>
+
+        <!-- mid container -->
+        <section class="mid-container">
+            <div class="box">
+                <h2>Shop Bait</h2>
+                <a href="baits.html" class="btn">Shop Now</a>
+            </div>
+            <div class="box">
+                <h2>Shop Tackle</h2>
+                <a href="tackle.html" class="btn">Shop Now</a>
+            </div>
+            <div class="box">
+                <h2>Everything Else</h2>
+                <a href="services.html" class="btn">Shop Now</a>
+            </div>
+        </section>
+
+        <!-- location/contact section -->
+        <section class="bottom-container">
+            <div class="location">
+                <h1>Where to find us!</h1>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.717687014598!2d-83.7489264!3d39.947704099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f5130f81985dd%3A0x39561b9624015afe!2sHoward&#39;s%20Lakeside%20General%20Store!5e0!3m2!1sen!2sus!4v1689290963755!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div class="contact">
+                <h1>How to contact us!</h1>
+                <h3>Email:</h3>
+                <p><a href="mailto:howardslakeside@gmail.com">howardslakeside@gmial.com</a></p>
+                <h3>Phone:</h3>
+                <p><a href="tel:937-505-1037">(937)505-1037</a></p>
+                <h3>Social Media:</h3>
+                <a href="https://www.facebook.com/people/Howards-Lakeside-General-Store/100057407261126/"
+                    target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+            </div>
+        </section>
+
+        <!-- footer -->
+        <footer>
+            <p>Howards Lakeside General Store &copy;2023</p>
+        </footer>
+
 
     </div>
 </body>
+
 </html>
