--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsiveStyles.css">
     <script src="https://kit.fontawesome.com/5f523fed1c.js" crossorigin="anonymous"></script>
 </head>
 
@@ -54,22 +55,21 @@
                     <li>Pop</li>
                     <li>Snacks</li>
                 </ul>
-                <a href="" class="btn">Shop Now</a>
             </div>
         </section>
 
         <!-- mid container -->
         <section class="mid-container">
-            <div class="box">
+            <div class="box-a">
                 <h2>Shop Bait</h2>
                 <a href="baits.html" class="btn">Shop Now</a>
             </div>
-            <div class="box">
+            <div class="box-b">
                 <h2>Shop Tackle</h2>
                 <a href="tackle.html" class="btn">Shop Now</a>
             </div>
-            <div class="box">
-                <h2>Everything Else</h2>
+            <div class="box-c">
+                <h2>Other Services</h2>
                 <a href="services.html" class="btn">Shop Now</a>
             </div>
         </section>
@@ -80,7 +80,7 @@
                 <h1>Where to find us!</h1>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.717687014598!2d-83.7489264!3d39.947704099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f5130f81985dd%3A0x39561b9624015afe!2sHoward&#39;s%20Lakeside%20General%20Store!5e0!3m2!1sen!2sus!4v1689290963755!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
