--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsiveStyles.css">
 </head>
 
 <body>
@@ -36,18 +37,16 @@
         <section class="s-top-container">
             <header>
                 <h1>Grab your fishing or hunting license today!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse doloribus reprehenderit ab, excepturi alias
-                    fugiat.</p>
+                <p>Annual fishing licenses are valid for 365 days from the date of purchase. A complete list of license options and prices can be found by clicking "Buy Now" to the right!</p>
+                <p>There are many options when it comes to hunting licenses, including 1 year, 3 year, and 5 year options!</p>
             </header>
             <div class="s-box-a">
                 <h4>Fishing License</h4>
-                <p class="l-price">$25.00</p>
-                <a href="" class="btn">Buy Now</a>
+                <a href="">Buy Now</a>
             </div>
             <div class="s-box-b">
                 <h4>Hunting License</h4>
-                <p class="l-price">$18.00</p>
-                <a href="" class="btn">Buy Now</a>
+                <a href="https://ohiodnr.gov/buy-and-apply/hunting-fishing-boating/hunting-resources/hunting-licenses-permits" class="btn" target="_blank">Buy Now</a>
             </div>
         </section>
 
