--- a/baits.html
+++ b/baits.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Bait</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsiveStyles.css">
 </head>
 
 <body>
@@ -39,67 +40,67 @@
             <section class="b-top-container">
                 <div>
                     <img src="img/redworms.jpg" alt="">
-                    <h5>Redworms</h5>
+                    <h3>Redworms</h3>
                     <p>$3.45/24 ct.</p>
                 </div>
                 <div>
                     <img src="img/night-crawlers.jpg" alt="">
-                    <h5>Night Crawlers</h5>
+                    <h3>Night Crawlers</h3>
                     <p>$2.80/12 ct.</p>
                 </div>
                 <div>
                     <img src="img/glow-worms.jpg" alt="">
-                    <h5>Glow Worms</h5>
+                    <h3>Glow Worms</h3>
                     <p>$3.25/12 ct.</p>
                 </div>
                 <div>
                     <img src="img/wax-worms.jpg" alt="">
-                    <h5>Wax Worms</h5>
+                    <h3>Wax Worms</h3>
                     <p>$2.80/50 ct.</p>
                 </div>
                 <div>
                     <img src="img/leeches.jpg" alt="">
-                    <h5>Leeches</h5>
+                    <h3>Leeches</h3>
                     <p>$4.00/12 ct.</p>
                 </div>
             </section>
-            
+
             <!-- middle container -->
             <h2>Cold Bait</h2>
             <section class="b-mid-container">
                 <div>
                     <img src="img/skipjack.jpg" alt="">
-                    <h5>Skipjack</h5>
+                    <h3>Skipjack</h3>
                     <p>$8.00</p>
                 </div>
                 <div>
                     <img src="img/shad.jpg" alt="">
-                    <h5>Shad</h5>
+                    <h3>Shad</h3>
                     <p>$6.00</p>
                 </div>
                 <div>
                     <img src="img/strawberry-liver.jpg" alt="">
-                    <h5>Strawberry Liver</h5>
+                    <h3>Strawberry Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
                     <img src="img/cherry-liver.jpg" alt="">
-                    <h5>Cherry Liver</h5>
+                    <h3>Cherry Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
                     <img src="img/liver.jpg" alt="">
-                    <h5>Liver</h5>
+                    <h3>Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
                     <img src="img/shrimp.jpg" alt="">
-                    <h5>Shrimp</h5>
+                    <h3>Shrimp</h3>
                     <p>$4.50/tub</p>
                 </div>
                 <div>
                     <img src="img/corn.jpg" alt="">
-                    <h5>Corn</h5>
+                    <h3>Corn</h3>
                     <p>$1.00/tub</p>
                 </div>
             </section>
@@ -109,38 +110,38 @@
                 <table>
                     <tr>
                         <td colspan="4">
-                            <h2>Live Fish</h2>
+                            <h1>Live Fish</h1>
                         </td>
                     </tr>
                     <tr>
-                        <td>Crappie Minnows</td>
-                        <td colspan="3">$2.00/12 ct.</td>
+                        <td><h3>Crappie Minnows</h3></td>
+                        <td colspan="3"><p>$2.00/12 ct.</p></td>
                     </tr>
                     <tr>
-                        <td>Bass Minnows</td>
-                        <td colspan="3">$2.20/12 ct.</td>
+                        <td><h3>Bass Minnows</h3></td>
+                        <td colspan="3"><p>$2.20/12 ct.</p></td>
                     </tr>
                     <tr>
-                        <td rowspan="2">Goldfish</td>
-                        <td>Small</td>
+                        <td rowspan="2"><h3>Goldfish</h3></td>
+                        <td><h4>Small</h4></td>
                         <td></td>
-                        <td>Large</td>
+                        <td><h4>Large</h4></td>
                     </tr>
                     <tr>
-                        <td>$2.00/ea.</td>
+                        <td><p>$2.00/ea.</p></td>
                         <td></td>
-                        <td>$3.00/ea.</td>
+                        <td><p>$3.00/ea.</p></td>
                     </tr>
                     <tr>
-                        <td rowspan="2">Catfish</td>
-                        <td>Small</td>
-                        <td>Medium</td>
-                        <td>Large</td>
+                        <td rowspan="2"><h3>Catfish</h3></td>
+                        <td><h4>Small</h4></td>
+                        <td><h4>Medium</h4></td>
+                        <td><h4>Large</h4></td>
                     </tr>
                     <tr>
-                        <td>$1.50/ea.</td>
-                        <td>$3.00/ea.</td>
-                        <td>4.50/ea.</td>
+                        <td><p>$1.50/ea.</p></td>
+                        <td><p>$3.00/ea.</p></td>
+                        <td><p>4.50/ea.</p></td>
                     </tr>
                 </table>
             </section>
