--- a/tackle.html
+++ b/tackle.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tackle</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsiveStyles.css">
 </head>
 
 <body>
@@ -39,32 +40,32 @@
             <section class="t-top-container">
                 <div>
                     <img src="img/Deep-Six Japan.webp" alt="">
-                    <h5>Deep-Six Japan</h5>
+                    <h3>Deep-Six Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
                     <img src="img/Custom Rock Crawler RK55.webp" alt="">
-                    <h5>Custom Rock Crawler RK55</h5>
+                    <h3>Custom Rock Crawler RK55</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
                     <img src="img/Hardcore Bullet Crank 5+.webp" alt="">
-                    <h5>Hardcore Bullet Crank 5+</h5>
+                    <h3>Hardcore Bullet Crank 5+</h3>
                     <p>$15.99</p>
                 </div>
                 <div>
                     <img src="img/ONETEN Jr Japan.webp" alt="">
-                    <h5>ONETEN Jr Japan</h5>
+                    <h3>ONETEN Jr Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
                     <img src="img/Vision ONETEN.webp" alt="">
-                    <h5>Vision ONETEN</h5>
+                    <h3>Vision ONETEN</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
                     <img src="img/ONETEN SP-C.webp" alt="">
-                    <h5>ONETEN SP-C</h5>
+                    <h3>ONETEN SP-C</h3>
                     <p>$26.99</p>
                 </div>
             </section>
@@ -74,28 +75,28 @@
             <section class="t-mid-container">
                 <div>
                     <img src="img/Spark Shad.webp" alt="">
-                    <h5>Spark Shad</h5>
+                    <h3>Spark Shad</h3>
                     <p>$8.99</p>
                 </div>
                 <div>
                     <img src="img/Yamatanuki.webp" alt="">
-                    <h5>Yamatanuki</h5>
+                    <h3>Yamatanuki</h3>
                     <p>$6.99</p>
                 </div>
                 <div>
                     <img src="img/Armor Shad.webp" alt="">
-                    <h5>Armor Shad</h5>
+                    <h3>Armor Shad</h3>
                     <p>$4.99</p>
                 </div>
                 <div>
                     <img src="img/Sleeper Craw.webp" alt="">
-                    <h5>Sleeper Craw</h5>
+                    <h3>Sleeper Craw</h3>
                     <p>$9.99</p>
                 </div>
                 <div>
                     <img src="img/MAGBEAT.webp" alt="">
-                    <h5>MAGBEAT</h5>
-                    <p></p>
+                    <h3>MAGBEAT</h3>
+                    <p>$10.99</p>
                 </div>
             </section>
 
@@ -104,17 +105,17 @@
             <section class="t-bottom-container">
                 <div>
                     <img src="img/Sickle Glide Bait.webp" alt="">
-                    <h5>8" Sickle Glide Bait</h5>
+                    <h3>8" Sickle Glide Bait</h3>
                     <p>$125.00</p>
                 </div>
                 <div>
                     <img src="img/KGB Chad Shad.webp" alt="">
-                    <h5>KGB Chad Shad</h5>
+                    <h3>KGB Chad Shad</h3>
                     <p>$175.00</p>
                 </div>
                 <div>
                     <img src="img/KGB Chad Shad 180.webp" alt="">
-                    <h5>KGB Chad Shad 180</h5>
+                    <h3>KGB Chad Shad 180</h3>
                     <p>$59.99</p>
                 </div>
             </section>
