--- a/baits.html
+++ b/baits.html
@@ -20,11 +20,11 @@
 
         <!-- header section -->
         <div class="h-container">
-            <img src="img/logo.png" alt="Lakeside General Store">
+            <img src="img/home-img/logo.png" alt="Lakeside General Store">
         </div>
 
         <!-- navigation section -->
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="baits.html">Live Bait</a></li>
@@ -39,27 +39,27 @@
             <h2>Live Bait</h2>
             <section class="b-top-container">
                 <div>
-                    <img src="img/redworms.jpg" alt="">
+                    <img src="img/baits-img/redworms.jpg" alt="">
                     <h3>Redworms</h3>
                     <p>$3.45/24 ct.</p>
                 </div>
                 <div>
-                    <img src="img/night-crawlers.jpg" alt="">
+                    <img src="img/baits-img/night-crawlers.jpg" alt="">
                     <h3>Night Crawlers</h3>
                     <p>$2.80/12 ct.</p>
                 </div>
                 <div>
-                    <img src="img/glow-worms.jpg" alt="">
+                    <img src="img/baits-img/glow-worms.jpg" alt="">
                     <h3>Glow Worms</h3>
                     <p>$3.25/12 ct.</p>
                 </div>
                 <div>
-                    <img src="img/wax-worms.jpg" alt="">
+                    <img src="img/baits-img/wax-worms.jpg" alt="">
                     <h3>Wax Worms</h3>
                     <p>$2.80/50 ct.</p>
                 </div>
                 <div>
-                    <img src="img/leeches.jpg" alt="">
+                    <img src="img/baits-img/leeches.jpg" alt="">
                     <h3>Leeches</h3>
                     <p>$4.00/12 ct.</p>
                 </div>
@@ -69,37 +69,37 @@
             <h2>Cold Bait</h2>
             <section class="b-mid-container">
                 <div>
-                    <img src="img/skipjack.jpg" alt="">
+                    <img src="img/baits-img/skipjack.jpg" alt="">
                     <h3>Skipjack</h3>
                     <p>$8.00</p>
                 </div>
                 <div>
-                    <img src="img/shad.jpg" alt="">
+                    <img src="img/baits-img/shad.jpg" alt="">
                     <h3>Shad</h3>
                     <p>$6.00</p>
                 </div>
                 <div>
-                    <img src="img/strawberry-liver.jpg" alt="">
+                    <img src="img/baits-img/strawberry-liver.jpg" alt="">
                     <h3>Strawberry Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
-                    <img src="img/cherry-liver.jpg" alt="">
+                    <img src="img/baits-img/cherry-liver.jpg" alt="">
                     <h3>Cherry Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
-                    <img src="img/liver.jpg" alt="">
+                    <img src="img/baits-img/liver.jpg" alt="">
                     <h3>Liver</h3>
                     <p>$3.00/tub</p>
                 </div>
                 <div>
-                    <img src="img/shrimp.jpg" alt="">
+                    <img src="img/baits-img/shrimp.jpg" alt="">
                     <h3>Shrimp</h3>
                     <p>$4.50/tub</p>
                 </div>
                 <div>
-                    <img src="img/corn.jpg" alt="">
+                    <img src="img/baits-img/corn.jpg" alt="">
                     <h3>Corn</h3>
                     <p>$1.00/tub</p>
                 </div>
