--- a/services.html
+++ b/services.html
@@ -20,11 +20,11 @@
 
         <!-- header section -->
         <div class="h-container">
-            <img src="img/logo.png" alt="Lakeside General Store">
+            <img src="img/home-img/logo.png" alt="Lakeside General Store">
         </div>
 
         <!-- navigation section -->
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="baits.html">Live Bait</a></li>
@@ -42,7 +42,7 @@
             </header>
             <div class="s-box-a">
                 <h4>Fishing License</h4>
-                <a href="">Buy Now</a>
+                <a href="https://ohiodnr.gov/buy-and-apply/hunting-fishing-boating/fishing-resources/fishing-licenses" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="s-box-b">
                 <h4>Hunting License</h4>
@@ -56,7 +56,8 @@
                 <h2>Respooling Service</h2>
                 <p>We offer reel respooling. Leave your broken down reels with us and we'll have them respooled within 24 hours!</p>
             </div>
-            <img src="img/birdsnest.webp" alt="">
+            <img src="img/services-img/birdsnest.webp" alt="" class="image-one">
+            <img src="img/services-img/birdsnest2.jpg" alt="" class="image-two">
         </section>
 
         <!-- footer -->
