--- a/tackle.html
+++ b/tackle.html
@@ -20,11 +20,11 @@
 
         <!-- header section -->
         <div class="h-container">
-            <img src="img/logo.png" alt="Lakeside General Store">
+            <img src="img/home-img/logo.png" alt="Lakeside General Store">
         </div>
 
         <!-- navigation section -->
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="baits.html">Live Bait</a></li>
@@ -39,32 +39,32 @@
             <h2>Hard Baits</h2>
             <section class="t-top-container">
                 <div>
-                    <img src="img/Deep-Six Japan.webp" alt="">
+                    <img src="img/tackle-img/Deep-Six Japan.webp" alt="">
                     <h3>Deep-Six Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
-                    <img src="img/Custom Rock Crawler RK55.webp" alt="">
+                    <img src="img/tackle-img/Custom Rock Crawler RK55.webp" alt="">
                     <h3>Custom Rock Crawler RK55</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
-                    <img src="img/Hardcore Bullet Crank 5+.webp" alt="">
+                    <img src="img/tackle-img/Hardcore Bullet Crank 5+.webp" alt="">
                     <h3>Hardcore Bullet Crank 5+</h3>
                     <p>$15.99</p>
                 </div>
                 <div>
-                    <img src="img/ONETEN Jr Japan.webp" alt="">
+                    <img src="img/tackle-img/ONETEN Jr Japan.webp" alt="">
                     <h3>ONETEN Jr Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
-                    <img src="img/Vision ONETEN.webp" alt="">
+                    <img src="img/tackle-img/Vision ONETEN.webp" alt="">
                     <h3>Vision ONETEN</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
-                    <img src="img/ONETEN SP-C.webp" alt="">
+                    <img src="img/tackle-img/ONETEN SP-C.webp" alt="">
                     <h3>ONETEN SP-C</h3>
                     <p>$26.99</p>
                 </div>
@@ -74,27 +74,27 @@
             <h2>Soft Baits</h2>
             <section class="t-mid-container">
                 <div>
-                    <img src="img/Spark Shad.webp" alt="">
+                    <img src="img/tackle-img/Spark Shad.webp" alt="">
                     <h3>Spark Shad</h3>
                     <p>$8.99</p>
                 </div>
                 <div>
-                    <img src="img/Yamatanuki.webp" alt="">
+                    <img src="img/tackle-img/Yamatanuki.webp" alt="">
                     <h3>Yamatanuki</h3>
                     <p>$6.99</p>
                 </div>
                 <div>
-                    <img src="img/Armor Shad.webp" alt="">
+                    <img src="img/tackle-img/Armor Shad.webp" alt="">
                     <h3>Armor Shad</h3>
                     <p>$4.99</p>
                 </div>
                 <div>
-                    <img src="img/Sleeper Craw.webp" alt="">
+                    <img src="img/tackle-img/Sleeper Craw.webp" alt="">
                     <h3>Sleeper Craw</h3>
                     <p>$9.99</p>
                 </div>
                 <div>
-                    <img src="img/MAGBEAT.webp" alt="">
+                    <img src="img/tackle-img/MAGBEAT.webp" alt="">
                     <h3>MAGBEAT</h3>
                     <p>$10.99</p>
                 </div>
@@ -104,19 +104,29 @@
             <h2>Swimbaits</h2>
             <section class="t-bottom-container">
                 <div>
-                    <img src="img/Sickle Glide Bait.webp" alt="">
+                    <img src="img/tackle-img/Sickle Glide Bait.webp" alt="">
                     <h3>8" Sickle Glide Bait</h3>
                     <p>$125.00</p>
                 </div>
                 <div>
-                    <img src="img/KGB Chad Shad.webp" alt="">
+                    <img src="img/tackle-img/KGB Chad Shad.webp" alt="">
                     <h3>KGB Chad Shad</h3>
                     <p>$175.00</p>
                 </div>
                 <div>
-                    <img src="img/KGB Chad Shad 180.webp" alt="">
+                    <img src="img/tackle-img/KGB Chad Shad 180.webp" alt="">
                     <h3>KGB Chad Shad 180</h3>
                     <p>$59.99</p>
+                </div>
+                <div>
+                    <img src="img/tackle-img/Trickster (GFB Swimbaits).jpg" alt="">
+                    <h3>Trickster (GFB Swimbaits)</h3>
+                    <p>$175.00</p>
+                </div>
+                <div>
+                    <img src="img/tackle-img/Jointed Claw 230 Magnum Glide Bait.webp" alt="">
+                    <h3>Jointed Claw 230 Magnum Glide Bait</h3>
+                    <p>$120.00</p>
                 </div>
             </section>
         </div>
