--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         <section class="top-container">
             <div class="showcase">
                 <h1>Welcome to Lakeside!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quia est repellendus modi. Vitae
-                    perspiciatis adipisci doloribus, ab illo, expedita quam sit esse beatae culpa quod? Quis rem unde
-                    deleniti fugiat sequi doloremque doloribus! Eum!</p>
+                <p>Located just up the road from CJ Brown Reservoir, we're here to offer you the best live baits, tackle, and service for the fairest prices around.</p>
+                <p>Camping at one of the local camp sites? Stop by and check out our inventory of all the necessary camping gear, or just stop for some self service firewood!</p>
+                <p>If you're needing to renew your hunting or fishing license, we can help with that also!</p>
+                <h1>Can't wait to see ya!</h1>
             </div>
 
             <div class="services">
