--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             
             <div class="vid">
-                <iframe width="800" height="500" src="https://www.youtube.com/embed/Fgj1WzODtKw" title="My First Muskie! Fishing CJ Brown Reservoir in Ohio in November" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="800" height="500" src="https://www.youtube.com/embed/Fgj1WzODtKw" title="My First Muskie! Fishing CJ Brown Reservoir in Ohio in November" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -96,7 +96,7 @@
                 <p><a href="https://www.google.com/maps/place/Howard's+Lakeside+General+Store/@39.947704,-83.748926,15z/data=!4m6!3m5!1s0x883f5130f81985dd:0x39561b9624015afe!8m2!3d39.9477041!4d-83.7489264!16s%2Fg%2F11bc9933bp?hl=en&entry=ttu" target="_blank">Address</a></p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.717687014598!2d-83.7489264!3d39.947704099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f5130f81985dd%3A0x39561b9624015afe!2sHoward&#39;s%20Lakeside%20General%20Store!5e0!3m2!1sen!2sus!4v1689290963755!5m2!1sen!2sus"
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
