--- a/tackle.html
+++ b/tackle.html
@@ -39,32 +39,32 @@
             <h2>Hard Baits</h2>
             <section class="t-top-container">
                 <div>
-                    <img src="img/tackle-img/Deep-Six Japan.webp" alt="">
+                    <img src="img/tackle-img/deep-six-japan.webp" alt="">
                     <h3>Deep-Six Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Custom Rock Crawler RK55.webp" alt="">
+                    <img src="img/tackle-img/custom-rock-crawler-RK55.webp" alt="">
                     <h3>Custom Rock Crawler RK55</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Hardcore Bullet Crank 5+.webp" alt="">
+                    <img src="img/tackle-img/hardcore-bullet-crank-5.webp" alt="">
                     <h3>Hardcore Bullet Crank 5+</h3>
                     <p>$15.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/ONETEN Jr Japan.webp" alt="">
+                    <img src="img/tackle-img/ONETEN-jr-japan.webp" alt="">
                     <h3>ONETEN Jr Japan</h3>
                     <p>$19.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Vision ONETEN.webp" alt="">
+                    <img src="img/tackle-img/vision-ONETEN.webp" alt="">
                     <h3>Vision ONETEN</h3>
                     <p>$24.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/ONETEN SP-C.webp" alt="">
+                    <img src="img/tackle-img/ONETEN-SP-C.webp" alt="">
                     <h3>ONETEN SP-C</h3>
                     <p>$26.99</p>
                 </div>
@@ -74,22 +74,22 @@
             <h2>Soft Baits</h2>
             <section class="t-mid-container">
                 <div>
-                    <img src="img/tackle-img/Spark Shad.webp" alt="">
+                    <img src="img/tackle-img/spark-shad.webp" alt="">
                     <h3>Spark Shad</h3>
                     <p>$8.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Yamatanuki.webp" alt="">
+                    <img src="img/tackle-img/yamatanuki.webp" alt="">
                     <h3>Yamatanuki</h3>
                     <p>$6.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Armor Shad.webp" alt="">
+                    <img src="img/tackle-img/armor-shad.webp" alt="">
                     <h3>Armor Shad</h3>
                     <p>$4.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Sleeper Craw.webp" alt="">
+                    <img src="img/tackle-img/sleeper-craw.webp" alt="">
                     <h3>Sleeper Craw</h3>
                     <p>$9.99</p>
                 </div>
@@ -104,27 +104,27 @@
             <h2>Swimbaits</h2>
             <section class="t-bottom-container">
                 <div>
-                    <img src="img/tackle-img/Sickle Glide Bait.webp" alt="">
+                    <img src="img/tackle-img/sickle-glide-bait.webp" alt="">
                     <h3>8" Sickle Glide Bait</h3>
                     <p>$125.00</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/KGB Chad Shad.webp" alt="">
+                    <img src="img/tackle-img/KGB-chad-shad.webp" alt="">
                     <h3>KGB Chad Shad</h3>
                     <p>$175.00</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/KGB Chad Shad 180.webp" alt="">
+                    <img src="img/tackle-img/KGB-chad-shad-180.webp" alt="">
                     <h3>KGB Chad Shad 180</h3>
                     <p>$59.99</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Trickster (GFB Swimbaits).jpg" alt="">
+                    <img src="img/tackle-img/trickster-(GFB-swimbaits).jpg" alt="">
                     <h3>Trickster (GFB Swimbaits)</h3>
                     <p>$175.00</p>
                 </div>
                 <div>
-                    <img src="img/tackle-img/Jointed Claw 230 Magnum Glide Bait.webp" alt="">
+                    <img src="img/tackle-img/jointed-claw-230-magnum-glide-bait.webp" alt="">
                     <h3>Jointed Claw 230 Magnum Glide Bait</h3>
                     <p>$120.00</p>
                 </div>
